# make-responsive-images

./: .bandit_4_tests.yml  .bashrc  .dockerignore  .env_template  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  AUTHORS.md  CHANGELOG.md  CNAME  CONTRIBUTING.md  Dockerfile.dev  Makefile  README-with-typer-docs.md  README.md  docker-compose.dev.yml  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.devcontainer/: devcontainer.json  docker-compose.dev.yml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: config.yml  privileged.yml
.github/workflows/: build-docs.yml  deploy-docs.yml  docs.yml  package.yml  publish.yml  publish2.yml  publish4.yml  pypi.yml  test.yml
docs/: index-typer-auto-generated.md  index.md
index-typer-auto-generated/: index.html
make_responsive_images/: __init__.py  __main__.py  main.py  utils.py
real/: real_run_resize_image.py
responsive_images_generator/: __init__.py  __main__.py  main.py  utils.py
scripts/: build-docs.sh  docs-live.sh  docs_build.sh  docs_build_test_w_mkdocs.sh  docs_build_w_mkdocs.sh  docs_deploy_github_pages_w_mkdocs.sh  docs_deploy_github_w_mkdocs.sh  docs_test_w_mkdocs.sh  dos2unix_entire_directory.sh  fix_all_line_endings_dos2unix.sh  format.sh  get_envs_before_uploading.sh  lint.sh  lint2.sh  lint_apply.sh  lint_check.sh  poetry_build_package.sh  poetry_install_package.sh  poetry_make_requirements_txt.sh  poetry_publish_package_prod.sh  poetry_publish_package_test.sh  poetry_update_lock_file.sh  test.sh  typer_cli_generate_docs.sh  typer_generate_docs.sh
scripts/optional/: typer_cli_generate_docs.sh
search/: search_index.json
tests/: test_images.py
tests/fixtures/: img_tag.html
